--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   --bg-main: #f1faee;
   --bg-secondary: #a8dadc;
   --text-main: #1d3557;
-  --text-accent: #457b9d;
+  --text-accent: #5b90b1;
   --text-accent-two: #e63946;
   background-color: var(--bg-main);
   font-family: var(--font-heading);
@@ -129,7 +129,9 @@ ul[role="list"] {
     grid-template-columns: repeat(8, 1fr);
     border: 4px solid var(--text-main);
     border-radius: 0.4rem;
+    overflow: hidden;
     /* background-color: #457b9d; */
     width: 40rem;
     height: 40rem;
 }
+
