--- a/style.css
+++ b/style.css
@@ -121,17 +121,52 @@ ul[role="list"] {
     align-items: center;
     min-width: 100vw;
     min-height: 100vh;
+    gap: 2rem;
 }
 
 .board {
     display: grid;
     grid-template-rows: repeat(8, 1fr);
     grid-template-columns: repeat(8, 1fr);
-    border: 4px solid var(--text-main);
-    border-radius: 0.4rem;
+    border: 3px solid var(--text-main);
+    border-radius: 0.3rem;
     overflow: hidden;
-    /* background-color: #457b9d; */
-    width: 40rem;
-    height: 40rem;
+    min-width: 40rem;
+    min-height: 40rem;
 }
 
+#knight {
+    z-index: 10;
+    color: #e64c3c;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+}
+
+.fa-chess-knight {
+    font-size: 2.5rem;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+}
+
+.cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    -webkit-user-drag: none;
+}
+
+.draggable {
+    cursor: grab;
+    user-select: none;
+    /* outline: 1px solid gold; */
+}
+
+.dropzone.over {
+    border: 3px solid #e67366;
+    background-color: #e29f97 !important;
+}
